# fastapi_project

./: .dockerignore  Dockerfile.dev  README.md  main_dev.sh
docker_compose/: compose.yml  main_dev.sh  pyproject.toml
multi_container_in_docker_compose/: README.md  compose.yml  pyproject.toml
multi_container_in_docker_compose/src/fastapi_project/: database.py  main.py  models.py  schemas.py
src/fastapi_project/: main.py
tests/: test_main.py
